Adding some links, notes to lead item

--- a/2025/2025-05-11-wir.md
+++ b/2025/2025-05-11-wir.md
@@ -1,3 +1,5 @@
+<!-- Got some help from NotebookLM with lead item and "Five Things" section where noted in the comments throughout the body of this draft. - pm -->
+
 # tktk
 ## tktk
 
@@ -16,11 +18,15 @@
 
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
- Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+<!-- For the lead item, riff on de-dollarization. Some notes & useful links: -->
 
- Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+- Recent Ezra Klein podcast with Ken Rogoff: https://www.youtube.com/watch?v=pT2cohNt6a4&t=958s <!-- Primo quotes ~30 mins and ~38 mins in -->
 
- Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda. Yadda yadda yadda.
+- The dollar isn't worth its weight in gold. https://www.cabotwealth.com/daily/precious-metals-investing/dollar-isnt-worth-its-weight-in-gold
+
+- Update market indicators since Liberation Day: Dollar, BTC, 10-year, etc.
+
+- BTC market story Thursday: https://decrypt.co/318527/bitcoin-price-100000-first-time-february
 
  <hr>
 
@@ -33,32 +39,35 @@
 
 *The week's top headlines emerging technologies and trends reshaping the web:*
 
-- **Layer-1 networks continue to upgrade:** Ethereum's Pecta upgrade went live: https://www.coindesk.com/tech/2025/05/07/ethereum-activates-pectra-upgrade-raising-max-stake-to-2048-eth | Bitcoin-Cardano transfer completed with no bridge, just zero-knowledge proofs. ([Decrypt](https://decrypt.co/317840/bitcoinos-demo-sends-btc-to-cardano-and-back-without-a-cross-chain-bridge)) *Vitalik Buterin wants to make Ethereum "as simple as Bitcoin" by 2030.* His proposed path involves implementing a "beam chain" for faster finality and simpler concepts, reducing active validators, integrating STARK-based aggregation, and standardizing protocols across layers. ([CryptoSlate](https://cryptoslate.com/vitalik-buterin-wants-to-make-ethereum-as-simple-as-bitcoin-by-2030/)) https://decrypt.co/318275/ethereum-rolls-out-pectra-most-ambitious-upgrade-yet
+- **Layer-1 networks continue to upgrade:** <!-- Ethereum's Pecta upgrade went live: https://www.coindesk.com/tech/2025/05/07/ethereum-activates-pectra-upgrade-raising-max-stake-to-2048-eth | Bitcoin-Cardano transfer completed with no bridge, just zero-knowledge proofs. ([Decrypt](https://decrypt.co/317840/bitcoinos-demo-sends-btc-to-cardano-and-back-without-a-cross-chain-bridge)) *Vitalik Buterin wants to make Ethereum "as simple as Bitcoin" by 2030.* His proposed path involves implementing a "beam chain" for faster finality and simpler concepts, reducing active validators, integrating STARK-based aggregation, and standardizing protocols across layers. ([CryptoSlate](https://cryptoslate.com/vitalik-buterin-wants-to-make-ethereum-as-simple-as-bitcoin-by-2030/)) https://decrypt.co/318275/ethereum-rolls-out-pectra-most-ambitious-upgrade-yet -->
 
-- **OpenAI updates:** https://www.wsj.com/tech/ai/openai-to-become-public-benefit-corporation-9e7896e0?st=QVaRQ6&reflink=desktopwebshare_permalink | https://www.reuters.com/business/elon-musk-keep-lawsuit-against-openai-despite-nonprofit-control-statement-lawyer-2025-05-06/ | https://www.axios.com/2025/05/07/openai-democratic-ai-expansion | https://finance.yahoo.com/news/microsoft-key-holdout-openai-restructuring-234551638.html | https://www.reuters.com/business/openai-agrees-buy-windsurf-about-3-billion-bloomberg-news-reports-2025-05-06/
+- **Crypto payments:** <!-- New Stripe payments features: https://www.theblock.co/post/353605/stripe-unveils-new-stablecoin-feature-following-1-1-billion-bridge-acquisition | Coinbase updates long-forgotten 402 code. https://decrypt.co/318467/coinbase-breathes-new-lift-into-long-forgotten-web-payment-code | https://www.coindesk.com/business/2025/05/07/visa-doubles-down-on-stablecoins-with-investment-in-blockchain-payments-firm-bvnk -->
 
-- **eToro IPO** tktktk ([Reuters](https://www.reuters.com/markets/deals/israels-etoro-targets-4-billion-valuation-us-ipo-2025-05-05/))
+- **Crypto exchanges made some yuge deals:** <!-- **eToro IPO** tktktk ([Reuters](https://www.reuters.com/markets/deals/israels-etoro-targets-4-billion-valuation-us-ipo-2025-05-05/)) | Coinbase acquisition: https://www.theblock.co/post/353657/coinbase-agrees-to-acquire-crypto-derivatives-exchange-deribit-in-record-2-9-billion-deal | https://www.coindesk.com/business/2025/05/08/coinbase-buys-deribit-for-usd2-9b | https://www.wsj.com/finance/currencies/coinbase-strikes-2-9-billion-deal-for-major-crypto-options-platform-a87ca4b3 -->
 
-- a16z explainer re: tokenomics -- https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn
+- **OpenAI updates:** <!-- https://www.wsj.com/tech/ai/openai-to-become-public-benefit-corporation-9e7896e0?st=QVaRQ6&reflink=desktopwebshare_permalink | https://www.reuters.com/business/elon-musk-keep-lawsuit-against-openai-despite-nonprofit-control-statement-lawyer-2025-05-06/ | https://www.axios.com/2025/05/07/openai-democratic-ai-expansion | https://finance.yahoo.com/news/microsoft-key-holdout-openai-restructuring-234551638.html | https://www.reuters.com/business/openai-agrees-buy-windsurf-about-3-billion-bloomberg-news-reports-2025-05-06/ | https://www.pbs.org/newshour/politics/watch-live-openai-co-founder-sam-altman-testifies-on-ai-competition-in-senate-hearing -->
 
-<!-- Some other candidates... -->
-
-- Why Are All the Billionaires Around Trump Such Losers? ([Slate](https://slate.com/news-and-politics/2025/05/jeff-bezos-elon-musk-mark-zuckerberg-donald-trump-billionaire-losers-maga.html))
-
-- The dollar isn't worth its weight in gold. https://www.cabotwealth.com/daily/precious-metals-investing/dollar-isnt-worth-its-weight-in-gold
+- OCC relaxes crypto rules <!-- https://decrypt.co/318478/occ-says-banks-can-handle-crypto-for-customers-and-outsource-it-too -->
 
 ### Looking Ahead
 
-- The digital news outlet El Faro says El Salvador's Bukele is preparing to arrest several of its journalsits. https://www.msn.com/en-xl/news/other/trump-ally-reportedly-set-to-arrest-journalists-who-revealed-his-secret-pact-with-gangs/ar-AA1EdWNJ | https://elfaro.net/en/202515/el_salvador/27826/El-Faro-Denounces-Possible-Arrest-Warrants-for-At-Least-Seven-Staff-Members-in-El-Salvador.htm <!-- Update later in the week. -->
+- **Crypto bill losing support in Senate, Trump crypto dealings getting greater scrutiny:** <!-- https://www.politico.com/live-updates/2025/05/05/congress/crypto-stablecoin-senate-gallego-warren-trump-00326235 | https://www.yahoo.com/news/crypto-bill-faces-senate-pushback-182307355.html | https://www.axios.com/2025/05/07/trump-crypto-stablecoin-bill | https://decrypt.co/318358/democratic-senator-investigates-trumps-chilling-crypto-ventures | https://www.theblock.co/post/353484/mark-cuban-slams-trumps-crypto-ventures-as-bad-example | https://www.theblock.co/post/353501/rep-torres-to-introduce-bill-banning-trump-lawmakers-from-cashing-in-on-memecoins-and-stablecoins | https://mashable.com/article/donald-trump-cryptocurrency-memecoin-top-holders-foreign-exchanges -->
 
-- **Crypto bill losing support in Senate, Trump crypto dealings getting greater scrutiny:** https://www.politico.com/live-updates/2025/05/05/congress/crypto-stablecoin-senate-gallego-warren-trump-00326235 | https://www.yahoo.com/news/crypto-bill-faces-senate-pushback-182307355.html | https://www.axios.com/2025/05/07/trump-crypto-stablecoin-bill | https://decrypt.co/318358/democratic-senator-investigates-trumps-chilling-crypto-ventures | https://www.theblock.co/post/353484/mark-cuban-slams-trumps-crypto-ventures-as-bad-example | https://www.theblock.co/post/353501/rep-torres-to-introduce-bill-banning-trump-lawmakers-from-cashing-in-on-memecoins-and-stablecoins |
-
+- The digital news outlet El Faro says El Salvador's Bukele is preparing to arrest several of its journalsits. <!-- https://www.msn.com/en-xl/news/other/trump-ally-reportedly-set-to-arrest-journalists-who-revealed-his-secret-pact-with-gangs/ar-AA1EdWNJ | https://elfaro.net/en/202515/el_salvador/27826/El-Faro-Denounces-Possible-Arrest-Warrants-for-At-Least-Seven-Staff-Members-in-El-Salvador.htm  Update later in the week. -->
 
 ### Odds & Ends
 
-- NYT beat on earnings. <!-- Link TK -->
+- a16z explainer re: tokenomics <!-- https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn -->
 
-- **Being polite to ChatGPT is pointless.** <!-- Earlier summary drafted by NotebookLM --> The Decrypt article titled "Being Polite to ChatGPT is Pointless New Research Shows" discusses a new study by George Washington University researchers indicating that using polite words like "please" and "thank you" has a *negligible effect on AI response quality* for models like ChatGPT, contrary to earlier findings. The research suggests that the "Jekyll-and-Hyde tipping point" where AI outputs degrade depends on training and substantive prompt words, not courtesy, and relates to the model spreading its attention too thinly over longer responses. ([Decrypt](https://decrypt.co/317176/polite-chatgpt-pointless-new-research))
+<!-- Some other candidates...
+
+- Why Are All the Billionaires Around Trump Such Losers? ([Slate](https://slate.com/news-and-politics/2025/05/jeff-bezos-elon-musk-mark-zuckerberg-donald-trump-billionaire-losers-maga.html))
+
+-->
+
+- NYT beats earnings expectations on strong digital subs. ([Benzinga](https://www.benzinga.com/news/earnings/25/05/45253216/new-york-times-q1-earnings-revenue-beat-eps-beat-business-is-showing-resilience-amid-uncertainty))
+
+- **Being polite to ChatGPT is pointless.** The Decrypt article titled "Being Polite to ChatGPT is Pointless New Research Shows" discusses a new study by George Washington University researchers indicating that using polite words like "please" and "thank you" has a *negligible effect on AI response quality* for models like ChatGPT, contrary to earlier findings. The research suggests that the "Jekyll-and-Hyde tipping point" where AI outputs degrade depends on training and substantive prompt words, not courtesy, and relates to the model spreading its attention too thinly over longer responses. ([Decrypt](https://decrypt.co/317176/polite-chatgpt-pointless-new-research)) <!-- Early summary draft by NotebookLM -->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available here [here](https://w3wnews.substack.com/about).**_
 
