Writing through news summaries myself.

--- a/2025/2025-05-11-wir.md
+++ b/2025/2025-05-11-wir.md
@@ -14,11 +14,13 @@
 
 <hr>
 
-**Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+**Lead item on de-dollarization.** tk
 
 <!-- For the lead item, riff on de-dollarization. Some notes & useful links: -->
 
-- Recent Ezra Klein podcast with Ken Rogoff: https://www.youtube.com/watch?v=pT2cohNt6a4&t=958s <!-- Primo quotes ~30 mins and ~38 mins in -->
+- Recent Ezra Klein podcast with economist Ken Rogoff: https://www.youtube.com/watch?v=pT2cohNt6a4&t=958s <!-- Primo quotes ~30 mins and ~38 mins in -->
+
+- Simultaneous decline in U.S. stocks, Treasury bond prices, and the dollar in April '25. <!-- Need numbers to illustrate this. -->
 
 - Recent JPM report says de-dollarization may be more plausible post-tariffs. Find the report, or coverage thereof.
 
@@ -53,29 +55,41 @@
 
 *The week's top headlines emerging technologies and trends reshaping the web:*
 
+- **President Trump's personal crypto dealmaking hurt the industry** politically at the U.S. capitol for the first time. The GENIUS ACT, which would set clearer rules for stablecoins, [failed to pass](https://www.axios.com/2025/05/08/senate-vote-stablecoint-crypto-genius-act) a procedural vote in the Senate by a 48-49 margin Thursday. Several members dropped support for the bill at the last minute, due mostly to growing bipartisan discomfort with Trump's [potential conflicts](https://www.yahoo.com/news/crypto-bill-faces-senate-pushback-182307355.html) around the [DeFi](https://www.investopedia.com/decentralized-finance-defi-5113835) platform [World Liberty Financial](https://qz.com/trump-world-liberty-financial-corruption-meme-coin-1851779511) and his personal [TRUMP memecoin](https://mashable.com/article/donald-trump-cryptocurrency-memecoin-top-holders-foreign-exchanges)... The Genius Act [could yet be revived](https://gizmodo.com/crypto-friendly-genius-act-fails-key-senate-vote-as-dems-defect-2000599844), but it will have to survive a newly fraught political environment to do so... In the Senate, Connecticut Democrat Richard Blumenthal formed a new subcommittee [to investigate](https://decrypt.co/318358/democratic-senator-investigates-trumps-chilling-crypto-ventures) whether Trump's crypto ventures are violating federal laws. In the House, New York Democrat Ritchie Torres is [proposing legislation](https://www.theblock.co/post/353501/rep-torres-to-introduce-bill-banning-trump-lawmakers-from-cashing-in-on-memecoins-and-stablecoins) that would bar lawmakers from profiting from similar crypto activity in the future.
+
+- **Crypto exchanges on the move:** Coinbase acquired the crypto derivatives exchange Deribit [for $2.9 billion](https://www.wsj.com/finance/currencies/coinbase-strikes-2-9-billion-deal-for-major-crypto-options-platform-a87ca4b3?st=PpmDxh&reflink=desktopwebshare_permalink). But the San Francisco-based trading platform also posted [disappointing quarterly results](https://www.marketwatch.com/story/coinbase-expects-lower-subscription-revenue-and-a-lot-more-went-wrong-for-the-crypto-exchange-3ebd9259), which it attributed to “broader market declines driven by tariff policy and macroeconomic uncertainty”... Meanwhile, rival eToro [filed with U.S. regulators](https://www.reuters.com/markets/deals/israels-etoro-targets-4-billion-valuation-us-ipo-2025-05-05) to do an initial public offering of stock at Nasdaq.  
+
+<!--
+
 - **Layer-1 networks continue to upgrade:** Ethereum activated its significant 'Pectra' upgrade, increasing the maximum stake limit from 32 to 2,048 ETH, aiming to streamline staking and enhance wallet functionality. ([source](https://www.coindesk.com/tech/2025/05/07/ethereum-activates-pectra-upgrade-raising-max-stake-to-2048-eth)) | BitcoinOS showcased a demo enabling BTC transfers to Cardano and back without using a cross-chain bridge, highlighting advancements in blockchain interoperability. ([source](https://decrypt.co/317840/bitcoinos-demo-sends-btc-to-cardano-and-back-without-a-cross-chain-bridge)) | Ethereum co-founder Vitalik Buterin expressed a desire to simplify Ethereum to be as straightforward as Bitcoin by 2030, emphasizing user-friendliness and efficiency. ([source](https://cryptoslate.com/vitalik-buterin-wants-to-make-ethereum-as-simple-as-bitcoin-by-2030)) <!-- Draft summaries by ChatGPT -->
+<!--
 
 - **Crypto payments:** Stripe unveiled a new stablecoin initiative, marking its re-entry into the crypto payments space and aiming to facilitate faster, more efficient transactions. ([source](https://www.theblock.co/post/353605/stripe-unveils-new-stablecoin-feature-following-1-1-billion-bridge-acquisition))  Coinbase is breathing new life into a long-forgotten web payment code, aiming to enhance crypto payment integrations across the internet. ([source](https://decrypt.co/318467/coinbase-breathes-new-lift-into-long-forgotten-web-payment-code)) | Visa doubled down on stablecoins by investing in blockchain payments firm BVNK, signaling confidence in the future of crypto-based financial solutions. ([source](https://www.coindesk.com/business/2025/05/07/visa-doubles-down-on-stablecoins-with-investment-in-blockchain-payments-firm-bvnk))  <!-- Draft summaries by ChatGPT -->
 
-- **Crypto exchanges made some yuge deals:** Coinbase announced a $2.9 billion acquisition of crypto derivatives exchange Deribit, expanding its footprint in the crypto derivatives market. ([source](https://www.theblock.co/post/353657/coinbase-agrees-to-acquire-crypto-derivatives-exchange-deribit-in-record-2-9-billion-deal)) | Israeli trading platform eToro is aiming for a $4 billion valuation in its U.S. IPO, planning to raise up to $500 million by offering 10 million shares. ([source](https://www.reuters.com/markets/deals/israels-etoro-targets-4-billion-valuation-us-ipo-2025-05-05)) | Coinbase has agreed to acquire crypto options exchange Deribit for $2.9 billion, comprising $700 million in cash and 11 million shares of Coinbase Class A common stock. This strategic move aims to bolster Coinbase's presence in the crypto derivatives market, providing traders with access to a comprehensive suite of products, including spot, futures, and options trading. ([CoinDesk](https://www.coindesk.com/business/2025/05/08/coinbase-buys-deribit-for-usd2-9b)) | The acquisition of Deribit, the world's largest trading platform for bitcoin and ether options, marks Coinbase's largest deal to date. With Deribit's significant trading volume and institutional client base, the deal is expected to enhance Coinbase's global expansion and solidify its position in the lucrative crypto derivatives sector. ([Wall Street Journal](https://www.wsj.com/finance/currencies/coinbase-strikes-2-9-billion-deal-for-major-crypto-options-platform-a87ca4b3)) <!-- Draft summaries by ChatGPT -->
+<!--
 
 - **OpenAI updates:** OpenAI decided to abandon its plan to become a for-profit entity, opting to remain under nonprofit governance while restructuring its for-profit subsidiary as a public-benefit corporation. ([source](https://www.wsj.com/tech/ai/openai-to-become-public-benefit-corporation-9e7896e0?st=QVaRQ6&reflink=desktopwebshare_permalink)) | Despite OpenAI's structural changes, Elon Musk will proceed with his lawsuit against the company, challenging its shift away from the original nonprofit model. ([source](https://www.reuters.com/business/elon-musk-keep-lawsuit-against-openai-despite-nonprofit-control-statement-lawyer-2025-05-06)) OpenAI introduced a global initiative to support nations in developing AI infrastructure aligned with democratic values, focusing on localized AI applications in healthcare and education. ([source](https://www.axios.com/2025/05/07/openai-democratic-ai-expansion)) | OpenAI agreed to acquire AI coding tool Windsurf for approximately $3 billion, aiming to bolster its capabilities in AI development tools. ([source](https://www.reuters.com/business/openai-agrees-buy-windsurf-about-3-billion-bloomberg-news-reports-2025-05-06)) | OpenAI CEO Sam Altman testified before the U.S. Senate, discussing AI competition and the importance of responsible AI development in the face of global challenges. ([source](https://www.pbs.org/newshour/politics/watch-live-openai-co-founder-sam-altman-testifies-on-ai-competition-in-senate-hearing)) | Microsoft emerged as a key holdout in OpenAI's restructuring plans, with ongoing discussions about the company's future governance and investment structures. ([source](https://finance.yahoo.com/news/microsoft-key-holdout-openai-restructuring-234551638.html)) <!-- Draft summaries by ChatGPT -->
 
-- The U.S. Office of the Comptroller of the Currency (OCC) clarified that banks can manage cryptocurrency assets for customers and are permitted to outsource related services, provided they maintain proper oversight and adhere to regulatory standards. ([source](https://decrypt.co/318478/occ-says-banks-can-handle-crypto-for-customers-and-outsource-it-too)) <!-- Draft summary by ChatGPT -->
 
 ### Looking Ahead
 
-- **Crypto bill losing support in Senate, Trump crypto dealings getting greater scrutiny:** Senate Democrats are pushing to postpone the vote on the GENIUS Act, a cryptocurrency-related bill, to allow more time for bipartisan negotiations and to address concerns over potential conflicts of interest involving public officials. ([source](https://www.politico.com/live-updates/2025/05/05/congress/crypto-stablecoin-senate-gallego-warren-trump-00326235)) |  A proposed crypto bill is facing resistance in the Senate, with lawmakers expressing concerns over its implications and the need for more comprehensive regulatory frameworks before proceeding. ([source](https://www.yahoo.com/news/crypto-bill-faces-senate-pushback-182307355.html)) | A $2 billion crypto deal involving President Trump's family and a foreign government is threatening to derail bipartisan stablecoin legislation, with Democrats citing potential corruption and conflicts of interest. ([source](https://www.axios.com/2025/05/07/trump-crypto-stablecoin-bill)) | A Democratic senator has launched a subcommittee inquiry into President Trump's cryptocurrency ventures, expressing concerns over potential corruption and the influence of foreign entities. ([source](https://decrypt.co/318358/democratic-senator-investigates-trumps-chilling-crypto-ventures)) | Entrepreneur Mark Cuban criticized President Trump's involvement in cryptocurrency, labeling it a poor example for the industry and raising concerns over potential misuse of influence. ([source](https://www.theblock.co/post/353484/mark-cuban-slams-trumps-crypto-ventures-as-bad-example)) | Representative Ritchie Torres announced plans to introduce legislation that would prevent lawmakers from profiting from meme coins and stablecoins, aiming to address ethical concerns in the crypto space. ([source](https://www.theblock.co/post/353501/rep-torres-to-introduce-bill-banning-trump-lawmakers-from-cashing-in-on-memecoins-and-stablecoins)) | On-chain data shows there are 58 crypto wallets that have made more than $10 million combined on President Trump's memecoin. The findings raise fresh ethics concerns about possible influence on his official duties. ([source](https://mashable.com/article/donald-trump-cryptocurrency-memecoin-top-holders-foreign-exchanges)) <!-- Draft summaries by ChatGPT -->
+<!--
 
-- El Faro, a prominent Salvadoran news outlet, reported that at least seven of its staff members are facing potential arrest warrants, raising concerns over press freedom and government intimidation. ([source](https://elfaro.net/en/202515/el_salvador/27826/El-Faro-Denounces-Possible-Arrest-Warrants-for-At-Least-Seven-Staff-Members-in-El-Salvador.htm)) <!-- Draft summaries by ChatGPT --> | Alternet coverage: https://www.msn.com/en-xl/news/other/trump-ally-reportedly-set-to-arrest-journalists-who-revealed-his-secret-pact-with-gangs/ar-AA1EdWNJ
+- **Meta may take a second stab at stablecoins.** https://fortune.com/crypto/2025/05/08/meta-stablecoins-exploration-usdc-circle-diem-libra/
+
+<!--
+
+- The U.S. Office of the Comptroller of the Currency (OCC) clarified that banks can manage cryptocurrency assets for customers and are permitted to outsource related services, provided they maintain proper oversight and adhere to regulatory standards. ([Decrypt](https://decrypt.co/318478/occ-says-banks-can-handle-crypto-for-customers-and-outsource-it-too)) <!-- Draft summary by ChatGPT
+
+-->
+
+- **The Salvadoran news outlet El Faro** said on Monday that President Nayib Bukele's government is [preparing to arrest](https://beta.elfaro.net/en/el-salvador-en/el-faro-denounces-possible-arrest-warrants-for-at-least-seven-staff-members-in-el-salvador) several of its staff members to silence their reporting on the nation's criminal gangs. As of Friday, it doesn't seem there have in fact been any arrests. But it will be worth keeping an eye on this situation for those of us in America and beyond, as Bukele has grown [increasingly close](https://elfaro.net/en/202515/el_salvador/27826/El-Faro-Denounces-Possible-Arrest-Warrants-for-At-Least-Seven-Staff-Members-in-El-Salvador.htm) to President Trump politically. He has also been a darling of the bitcoin community for experimenting with the token [as legal tender](https://en.wikipedia.org/wiki/Bitcoin_in_El_Salvador) in El Salvador beginning in 2021.  
 
 ### Odds & Ends
 
-- A podcast episode by a16z crypto explores a new framework for understanding tokens, discussing their types, design, uses, and the evolving landscape of crypto assets. ([source](https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn)) <!-- Draft summary by ChatGPT -->
+- **Stop calling them ink-stained.** Nearly 95% of the New York Times' 11.66 million subscribers in the first quarter were digital-only customers, according to the publisher's latest [earnings report](https://nytco-assets.nytimes.com/2025/05/Q1-2025-Earnings-Release-Final-For-Distribution-EkMinJ5V.pdf), released Wednesday.
 
-- The New York Times Company announced better-than-expected first-quarter earnings, demonstrating resilience amid industry challenges and a shifting media landscape. ([Benzinga](https://www.benzinga.com/news/earnings/25/05/45253216/new-york-times-q1-earnings-revenue-beat-eps-beat-business-is-showing-resilience-amid-uncertainty)) <!-- Draft summary by ChatGPT -->
-
-- **Being polite to ChatGPT is pointless.** The Decrypt article titled "Being Polite to ChatGPT is Pointless New Research Shows" discusses a new study by George Washington University researchers indicating that using polite words like "please" and "thank you" has a *negligible effect on AI response quality* for models like ChatGPT, contrary to earlier findings. The research suggests that the "Jekyll-and-Hyde tipping point" where AI outputs degrade depends on training and substantive prompt words, not courtesy, and relates to the model spreading its attention too thinly over longer responses. ([Decrypt](https://decrypt.co/317176/polite-chatgpt-pointless-new-research)) <!-- Early summary draft by NotebookLM -->
+- **Being polite to AI chatbots is pointless,** according to new research by a team from George Washington University. But some skeptics say the latest study's methodology was too narrow to capture the broader impact of saying "please" and "thank you" to elicit higher-quality responses from some large-language models. ([Decrypt](https://decrypt.co/317176/polite-chatgpt-pointless-new-research))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available here [here](https://w3wnews.substack.com/about).**_
 
