--- a/2025/2025-05-11-wir.md
+++ b/2025/2025-05-11-wir.md
@@ -14,15 +14,31 @@
 
 <hr>
 
-**Lead item on de-dollarization.** tk
+**Back in October 2023,** during what now seems like a quaintly milder political crisis in America, I wrote about [possible fallout](https://peteramckay.medium.com/yes-de-dollarization-is-a-real-risk-fd43f7954fd5) for the U.S. dollar as the global economy's reserve currency:
 
-<!-- For the lead item, riff on de-dollarization. Some notes & useful links: -->
+>*My hunch is that the rest of the world is warming to a key idea that bitcoiners like [author Saifedean Ammous] stress: Any government-issued fiat currency is inherently a political creation.*
+>
+>*Perhaps the rest of the world is witnessing America’s increasingly dysfunctional politics at home and recognizing them as an incentive to back away from the dollar. Maybe other countries don’t want to be so tied economically to our domestic messes anymore...*
+>
+>*To put it a different way, economists tend to model the world around the idea of rational people acting to maximize their returns. But in the world we actually live in, the U.S. political system is in fact increasingly irrational.*
 
-- Recent Ezra Klein podcast with economist Ken Rogoff: https://www.youtube.com/watch?v=pT2cohNt6a4&t=958s <!-- Primo quotes ~30 mins and ~38 mins in -->
+At the time, Washington was suffering through a needless fight merely over who should be House speaker. Now we have something much worse -- a *president* waging an utterly bonkers trade war with most of the countries on the entire planet. (Except our besties Russia and North Korea, of course.)  
 
-- Simultaneous decline in U.S. stocks, Treasury bond prices, and the dollar in April '25. <!-- Need numbers to illustrate this. -->
+<!-- Wrap in week's market action. BTC and stock rallies, etc. -->
 
-- Recent JPM report says de-dollarization may be more plausible post-tariffs. Find the report, or coverage thereof.
+<!-- Long-term risks. Post-Liberation Day performance: -->
+
+Recent Ezra Klein podcast with economist Ken Rogoff: https://www.youtube.com/watch?v=pT2cohNt6a4&t=958s <!-- Primo quotes ~30 mins and ~38 mins in -->
+
+
+<!-- Additional string...
+
+
+- Simultaneous decline in U.S. stocks, Treasury bond prices, and the dollar in April '25. <!-- Need numbers to illustrate this.
+
+- AFP story on 11 April on USD hitting 3-yr low vs EUR: https://sg.news.yahoo.com/trumps-trade-whiplash-sends-dollar-122924953.html
+
+- JPM research note on 11 April: https://privatebank.jpmorgan.com/eur/en/insights/markets-and-investing/tmt/dollar-diversification-why-now | Followup on 22 April: https://privatebank.jpmorgan.com/nam/en/insights/markets-and-investing/market-thoughts/market-thoughts-the-dollar-frowns
 
 - Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war: https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs
 
@@ -32,7 +48,7 @@
 
 - Update market indicators since Liberation Day: Dollar, BTC, 10-year, etc.
 
-- Bitcoin's price surpassed $100,000 for the first time since February, buoyed by renewed investor optimism following a U.S.-U.K. trade agreement. ([source](https://decrypt.co/318527/bitcoin-price-100000-first-time-february))  <!-- Draft summary by ChatGPT -->
+- Bitcoin's price surpassed $100,000 for the first time since February, buoyed by renewed investor optimism following a U.S.-U.K. trade agreement. ([source](https://decrypt.co/318527/bitcoin-price-100000-first-time-february))  <!-- Draft summary by ChatGPT
 
 *From the w3w archives:*
 
@@ -42,7 +58,7 @@
 
 - **15 Oct. 2023:** "I used to think digital money is harder to understand than the old-fashioned kind, but that was wrong. It's just harder to take for granted as a feature of everyday life." Really, we should be asking the same hard questions of fiat that we ask of bitcoin. https://github.com/peteramckay/w3wnewsletter/blob/master/2023/2023-10-15.md
 
-- **14 April 2024:** Jamie Dimon gives an assessment of the US economy and inflation risk that, uncharacteristically, sounds a lot like the one on offer from bitcoiners. https://github.com/peteramckay/w3wnewsletter/blob/master/2024/2024-04-14.md
+- **14 April 2024:** Jamie Dimon gives an assessment of the US economy and inflation risk that, uncharacteristically, sounds a lot like the one on offer from bitcoiners. https://github.com/peteramckay/w3wnewsletter/blob/master/2024/2024-04-14.md -->
 
  <hr>
 
@@ -55,33 +71,20 @@
 
 *The week's top headlines emerging technologies and trends reshaping the web:*
 
-- **President Trump's personal crypto dealmaking hurt the industry** politically at the U.S. capitol for the first time. The GENIUS ACT, which would set clearer rules for stablecoins, [failed to pass](https://www.axios.com/2025/05/08/senate-vote-stablecoint-crypto-genius-act) a procedural vote in the Senate by a 48-49 margin Thursday. Several members dropped support for the bill at the last minute, due mostly to growing bipartisan discomfort with Trump's [potential conflicts](https://www.yahoo.com/news/crypto-bill-faces-senate-pushback-182307355.html) around the [DeFi](https://www.investopedia.com/decentralized-finance-defi-5113835) platform [World Liberty Financial](https://qz.com/trump-world-liberty-financial-corruption-meme-coin-1851779511) and his personal [TRUMP memecoin](https://mashable.com/article/donald-trump-cryptocurrency-memecoin-top-holders-foreign-exchanges)... The Genius Act [could yet be revived](https://gizmodo.com/crypto-friendly-genius-act-fails-key-senate-vote-as-dems-defect-2000599844), but it will have to survive a newly fraught political environment to do so... In the Senate, Connecticut Democrat Richard Blumenthal formed a new subcommittee [to investigate](https://decrypt.co/318358/democratic-senator-investigates-trumps-chilling-crypto-ventures) whether Trump's crypto ventures are violating federal laws. In the House, New York Democrat Ritchie Torres is [proposing legislation](https://www.theblock.co/post/353501/rep-torres-to-introduce-bill-banning-trump-lawmakers-from-cashing-in-on-memecoins-and-stablecoins) that would bar lawmakers from profiting from similar crypto activity in the future.
+- **President Trump's personal crypto dealmaking hurt the industry** politically at the U.S. capitol for the first time. The GENIUS ACT, which would set clearer rules for stablecoins, [failed to pass](https://www.axios.com/2025/05/08/senate-vote-stablecoint-crypto-genius-act) a procedural vote in the Senate by a 48-49 margin Thursday. Several members dropped support for the bill at the last minute, due mostly to growing bipartisan discomfort with Trump's [potential conflicts](https://www.yahoo.com/news/crypto-bill-faces-senate-pushback-182307355.html) around the [DeFi](https://www.investopedia.com/decentralized-finance-defi-5113835) platform [World Liberty Financial](https://qz.com/trump-world-liberty-financial-corruption-meme-coin-1851779511) and his personal [TRUMP memecoin](https://mashable.com/article/donald-trump-cryptocurrency-memecoin-top-holders-foreign-exchanges)... The Genius Act [could yet be revived](https://www.coindesk.com/news-analysis/2025/05/10/state-of-crypto-mapping-out-the-senate-stablecoin-bills-next-steps), but it will have to survive a newly fraught political environment to do so... In the Senate, Connecticut Democrat Richard Blumenthal formed a new subcommittee [to investigate](https://decrypt.co/318358/democratic-senator-investigates-trumps-chilling-crypto-ventures) whether Trump's crypto ventures are violating federal laws. In the House, New York Democrat Ritchie Torres is [proposing legislation](https://www.theblock.co/post/353501/rep-torres-to-introduce-bill-banning-trump-lawmakers-from-cashing-in-on-memecoins-and-stablecoins) that would bar lawmakers from profiting from similar crypto activity in the future.
+
+- **OpenAI nixed its plan to convert to a for-profit entity.** Instead, it will remain under nonprofit governance while [restructuring](https://www.wsj.com/tech/ai/openai-to-become-public-benefit-corporation-9e7896e0?st=QVaRQ6&reflink=desktopwebshare_permalink) its for-profit unit as a public-benefit corporation. CEO Sam Altman said the new approach will still allow OpenAI to access a $30 billion investment from SoftBank that was conditioned upon a successful restructuring... Separately, [OpenAI agreed to buy](https://finance.yahoo.com/news/openai-reaches-agreement-buy-startup-000054157.html) the bot-assisted developer tool Windsurf for approximately $3 billion, its biggest acquistion to date. You know, just typical stuff that nonprofits do.
+
+- **Ethereum activated its Pectra upgrade,** the network's [most significant iteration](https://www.coindesk.com/tech/2025/05/07/ethereum-activates-pectra-upgrade-raising-max-stake-to-2048-eth) since the Merge in 2022. Pectra raises Ethereum's maximum staking limit from 32 to 2,048 ether tokens, along with other improvements in efficiency and wallet functionality. In a [blog post](https://vitalik.eth.limo/general/2025/05/03/simplel1.html), Ethereum co-founder Vitalik Buterin said he would like to see the platform become "simple as Bitcoin" by 2030.
+
+- **Progress on crypto payments:** Coinbase revived a [long-forgotten payment feature](https://decrypt.co/318467/coinbase-breathes-new-lift-into-long-forgotten-web-payment-code) in the web's open HTTP standard. It could now be used to enable easier crypto payments on websites using minimal additional code and without user registration, emails, or complex signatures...
+The protocol only uses a single line of code, simplifying how crypto could be used as a native payment on the web... Stripe unveiled [a new service](https://www.theblock.co/post/353605/stripe-unveils-new-stablecoin-feature-following-1-1-billion-bridge-acquisition) that allows businesses in 101 countries to receive stablecoin payments via either crypto or convential finance networks... And Visa made a [$50 million strategic investment](https://www.coindesk.com/business/2025/05/07/visa-doubles-down-on-stablecoins-with-investment-in-blockchain-payments-firm-bvnk) in the on-chain payments startup BVNK, signaling confidence in the future of crypto-based financial solutions.
 
 - **Crypto exchanges on the move:** Coinbase acquired the crypto derivatives exchange Deribit [for $2.9 billion](https://www.wsj.com/finance/currencies/coinbase-strikes-2-9-billion-deal-for-major-crypto-options-platform-a87ca4b3?st=PpmDxh&reflink=desktopwebshare_permalink). But the San Francisco-based trading platform also posted [disappointing quarterly results](https://www.marketwatch.com/story/coinbase-expects-lower-subscription-revenue-and-a-lot-more-went-wrong-for-the-crypto-exchange-3ebd9259), which it attributed to “broader market declines driven by tariff policy and macroeconomic uncertainty”... Meanwhile, rival eToro [filed with U.S. regulators](https://www.reuters.com/markets/deals/israels-etoro-targets-4-billion-valuation-us-ipo-2025-05-05) to do an initial public offering of stock at Nasdaq.  
 
-<!--
-
-- **Layer-1 networks continue to upgrade:** Ethereum activated its significant 'Pectra' upgrade, increasing the maximum stake limit from 32 to 2,048 ETH, aiming to streamline staking and enhance wallet functionality. ([source](https://www.coindesk.com/tech/2025/05/07/ethereum-activates-pectra-upgrade-raising-max-stake-to-2048-eth)) | BitcoinOS showcased a demo enabling BTC transfers to Cardano and back without using a cross-chain bridge, highlighting advancements in blockchain interoperability. ([source](https://decrypt.co/317840/bitcoinos-demo-sends-btc-to-cardano-and-back-without-a-cross-chain-bridge)) | Ethereum co-founder Vitalik Buterin expressed a desire to simplify Ethereum to be as straightforward as Bitcoin by 2030, emphasizing user-friendliness and efficiency. ([source](https://cryptoslate.com/vitalik-buterin-wants-to-make-ethereum-as-simple-as-bitcoin-by-2030)) <!-- Draft summaries by ChatGPT -->
-<!--
-
-- **Crypto payments:** Stripe unveiled a new stablecoin initiative, marking its re-entry into the crypto payments space and aiming to facilitate faster, more efficient transactions. ([source](https://www.theblock.co/post/353605/stripe-unveils-new-stablecoin-feature-following-1-1-billion-bridge-acquisition))  Coinbase is breathing new life into a long-forgotten web payment code, aiming to enhance crypto payment integrations across the internet. ([source](https://decrypt.co/318467/coinbase-breathes-new-lift-into-long-forgotten-web-payment-code)) | Visa doubled down on stablecoins by investing in blockchain payments firm BVNK, signaling confidence in the future of crypto-based financial solutions. ([source](https://www.coindesk.com/business/2025/05/07/visa-doubles-down-on-stablecoins-with-investment-in-blockchain-payments-firm-bvnk))  <!-- Draft summaries by ChatGPT -->
-
-<!--
-
-- **OpenAI updates:** OpenAI decided to abandon its plan to become a for-profit entity, opting to remain under nonprofit governance while restructuring its for-profit subsidiary as a public-benefit corporation. ([source](https://www.wsj.com/tech/ai/openai-to-become-public-benefit-corporation-9e7896e0?st=QVaRQ6&reflink=desktopwebshare_permalink)) | Despite OpenAI's structural changes, Elon Musk will proceed with his lawsuit against the company, challenging its shift away from the original nonprofit model. ([source](https://www.reuters.com/business/elon-musk-keep-lawsuit-against-openai-despite-nonprofit-control-statement-lawyer-2025-05-06)) OpenAI introduced a global initiative to support nations in developing AI infrastructure aligned with democratic values, focusing on localized AI applications in healthcare and education. ([source](https://www.axios.com/2025/05/07/openai-democratic-ai-expansion)) | OpenAI agreed to acquire AI coding tool Windsurf for approximately $3 billion, aiming to bolster its capabilities in AI development tools. ([source](https://www.reuters.com/business/openai-agrees-buy-windsurf-about-3-billion-bloomberg-news-reports-2025-05-06)) | OpenAI CEO Sam Altman testified before the U.S. Senate, discussing AI competition and the importance of responsible AI development in the face of global challenges. ([source](https://www.pbs.org/newshour/politics/watch-live-openai-co-founder-sam-altman-testifies-on-ai-competition-in-senate-hearing)) | Microsoft emerged as a key holdout in OpenAI's restructuring plans, with ongoing discussions about the company's future governance and investment structures. ([source](https://finance.yahoo.com/news/microsoft-key-holdout-openai-restructuring-234551638.html)) <!-- Draft summaries by ChatGPT -->
-
-
 ### Looking Ahead
 
-<!--
-
-- **Meta may take a second stab at stablecoins.** https://fortune.com/crypto/2025/05/08/meta-stablecoins-exploration-usdc-circle-diem-libra/
-
-<!--
-
-- The U.S. Office of the Comptroller of the Currency (OCC) clarified that banks can manage cryptocurrency assets for customers and are permitted to outsource related services, provided they maintain proper oversight and adhere to regulatory standards. ([Decrypt](https://decrypt.co/318478/occ-says-banks-can-handle-crypto-for-customers-and-outsource-it-too)) <!-- Draft summary by ChatGPT
-
--->
+- **Meta may take a second stab at stablecoins.** Fortune's Leo Schwartz and Ben Weiss [report](https://fortune.com/crypto/2025/05/08/meta-stablecoins-exploration-usdc-circle-diem-libra/) that the social giant is in talks with potential crypto partners to introduce stablecoins as a means to manage payments on Meta's platforms. If Meta pushes ahead with a new offering, it would represent a remarkable comeback from their failed Libra stablecoin project. That one launched to great fanfare in 2019, immediately drew heavy criticism and skepticism from regulators around the world, re-branded as Diem, and ultimately shut down without ever issuing a single token.
 
 - **The Salvadoran news outlet El Faro** said on Monday that President Nayib Bukele's government is [preparing to arrest](https://beta.elfaro.net/en/el-salvador-en/el-faro-denounces-possible-arrest-warrants-for-at-least-seven-staff-members-in-el-salvador) several of its staff members to silence their reporting on the nation's criminal gangs. As of Friday, it doesn't seem there have in fact been any arrests. But it will be worth keeping an eye on this situation for those of us in America and beyond, as Bukele has grown [increasingly close](https://elfaro.net/en/202515/el_salvador/27826/El-Faro-Denounces-Possible-Arrest-Warrants-for-At-Least-Seven-Staff-Members-in-El-Salvador.htm) to President Trump politically. He has also been a darling of the bitcoin community for experimenting with the token [as legal tender](https://en.wikipedia.org/wiki/Bitcoin_in_El_Salvador) in El Salvador beginning in 2021.  
 
