Writing through lead item

--- a/2025/2025-05-11-wir.md
+++ b/2025/2025-05-11-wir.md
@@ -14,53 +14,21 @@
 
 <hr>
 
-**Back in October 2023,** during what now seems like a quaintly milder political crisis in America, I wrote about [possible fallout](https://peteramckay.medium.com/yes-de-dollarization-is-a-real-risk-fd43f7954fd5) for the U.S. dollar as the global economy's reserve currency:
+**Don't be fooled.**
 
->*My hunch is that the rest of the world is warming to a key idea that bitcoiners like [author Saifedean Ammous] stress: Any government-issued fiat currency is inherently a political creation.*
->
->*Perhaps the rest of the world is witnessing America’s increasingly dysfunctional politics at home and recognizing them as an incentive to back away from the dollar. Maybe other countries don’t want to be so tied economically to our domestic messes anymore...*
->
->*To put it a different way, economists tend to model the world around the idea of rational people acting to maximize their returns. But in the world we actually live in, the U.S. political system is in fact increasingly irrational.*
+Yes, markets have calmed since an initial shock from President Donald J. Trump's major tariff announcement on April 2, which he incongruously dubbed "Liberation Day." Now bitcoin is [within reach of a new record](https://www.business-standard.com/markets/cryptocurrency/bitcoin-holds-strong-above-100k-new-record-ahead-or-brewing-pullback-125050900712_1.html), and the S&P 500 has [almost recovered](https://www.businessinsider.com/why-stocks-have-rallied-furiously-since-their-liberation-day-losses-2025-5?op=1) to its pre-Liberation Day level heading into Monday's open on Wall Street.
 
-At the time, Washington was suffering through a needless fight merely over who should be House speaker. Now we have something much worse -- a *president* waging an utterly bonkers trade war with most of the countries on the entire planet. (Except our besties Russia and North Korea, of course.)  
+But major long-term risks remain on inflation, growth, and America's role as the linchpin of the global financial system. For an accessible discussion of that bigger picture, check out New York Times columnist Ezra Klein's [recent podcast episode](https://www.youtube.com/watch?v=pT2cohNt6a4&t=958s) with Harvard economist Kenneth Rogoff.
 
-<!-- Wrap in week's market action. BTC and stock rallies, etc. -->
+The professor has [a new book](https://www.amazon.com/Our-Dollar-Your-Problem-Turbulent/dp/0300275315/ref=sr_1_2?sr=8-2) out about the U.S. dollar's role as the world's reserve currency, which he sees as freshly in play because of Trump. In his chat with Klein, Rogoff says  the current president's chaotic trade policy poses the biggest risk to the dollar's global role since Nixon ended its peg to gold [in 1971](https://en.wikipedia.org/wiki/Nixon_shock).
 
-BI on market recovery post-Liberation Day: https://www.businessinsider.com/why-stocks-have-rallied-furiously-since-their-liberation-day-losses-2025-5?op=1
+Since Liberation Day, it's notable that the greenback has not recovered quite as quickly as stocks. The [U.S. Dollar Index](https://finance.yahoo.com/quote/DX-Y.NYB/?p=DX-Y.NYB&.tsrc=fin-srch), which measures the currency's strength versus a basket of foreign denominations, is still down more than 3%. And [gold](https://finance.yahoo.com/quote/GC%3DF/?p=GC%253DF), a traditional haven during economic turbulence, is still near its all-time high [set last month](https://www.cbsnews.com/sanfrancisco/news/volatility-in-the-stock-market-leads-to-soaring-gold-prices/).
 
-<!-- Long-term risks. Post-Liberation Day performance: -->
+Then there's that surge in bitcoin, which its fans often say could replace the dollar the global economy's standard.
 
-Recent Ezra Klein podcast with economist Ken Rogoff: https://www.youtube.com/watch?v=pT2cohNt6a4&t=958s <!-- Primo quotes ~30 mins and ~38 mins in -->
+Honestly, my hunch is that these last few weeks of gains are mostly a renewed round of speculation. Nothing more -- for now.
 
-
-<!-- Additional string...
-
-
-- Simultaneous decline in U.S. stocks, Treasury bond prices, and the dollar in April '25. <!-- Need numbers to illustrate this.
-
-- AFP story on 11 April on USD hitting 3-yr low vs EUR: https://sg.news.yahoo.com/trumps-trade-whiplash-sends-dollar-122924953.html
-
-- JPM research note on 11 April: https://privatebank.jpmorgan.com/eur/en/insights/markets-and-investing/tmt/dollar-diversification-why-now | Followup on 22 April: https://privatebank.jpmorgan.com/nam/en/insights/markets-and-investing/market-thoughts/market-thoughts-the-dollar-frowns
-
-- Coinbase analysts warn of a potential "crypto winter" due to the ongoing trade war: https://decrypt.co/315089/bitcoin-steadies-but-coinbase-analyst-sees-crypto-winter-tariffs
-
-- FT story: https://www.ft.com/content/8a71dceb-806f-4681-80f9-416aa4c366ca
-
-- The dollar isn't worth its weight in gold. https://www.cabotwealth.com/daily/precious-metals-investing/dollar-isnt-worth-its-weight-in-gold
-
-- Update market indicators since Liberation Day: Dollar, BTC, 10-year, etc.
-
-- Bitcoin's price surpassed $100,000 for the first time since February, buoyed by renewed investor optimism following a U.S.-U.K. trade agreement. ([source](https://decrypt.co/318527/bitcoin-price-100000-first-time-february))  <!-- Draft summary by ChatGPT
-
-*From the w3w archives:*
-
-- **13 Sept. 2020:** A hard look at Modern Monetary Theory and its potential to speed adoption of crypto as an alternative to devalued fiat. https://www.linkedin.com/pulse/crypto-vs-mmt-competing-visions-how-money-should-work-peter-mckay/
-
-- **8 Oct. 2023:** "Yes, de-dollarization is a real threat." https://github.com/peteramckay/w3wnewsletter/blob/master/2023/2023-10-08.md
-
-- **15 Oct. 2023:** "I used to think digital money is harder to understand than the old-fashioned kind, but that was wrong. It's just harder to take for granted as a feature of everyday life." Really, we should be asking the same hard questions of fiat that we ask of bitcoin. https://github.com/peteramckay/w3wnewsletter/blob/master/2023/2023-10-15.md
-
-- **14 April 2024:** Jamie Dimon gives an assessment of the US economy and inflation risk that, uncharacteristically, sounds a lot like the one on offer from bitcoiners. https://github.com/peteramckay/w3wnewsletter/blob/master/2024/2024-04-14.md -->
+But if the token sees a more sustained rally over time, in line with what I believe has already been a long-term [trend toward dysfunction](https://peteramckay.medium.com/yes-de-dollarization-is-a-real-risk-fd43f7954fd5) in the U.S. political system that undermines the dollar, let's check back on that piece of the puzzle.
 
  <hr>
 
