Fixing some typos with an assist from Copilot

--- a/2025/2025-05-11-wir.md
+++ b/2025/2025-05-11-wir.md
@@ -24,11 +24,9 @@ The professor has [a new book](https://www.amazon.com/Our-Dollar-Your-Problem-Tu
 
 Since Liberation Day, it's notable that the greenback has not recovered quite as quickly as stocks. The [U.S. Dollar Index](https://finance.yahoo.com/quote/DX-Y.NYB/?p=DX-Y.NYB&.tsrc=fin-srch), which measures the currency's strength versus a basket of foreign denominations, is still down more than 3%. And [gold](https://finance.yahoo.com/quote/GC%3DF/?p=GC%253DF), a traditional haven during economic turbulence, is still near its all-time high [set last month](https://www.cbsnews.com/sanfrancisco/news/volatility-in-the-stock-market-leads-to-soaring-gold-prices/).
 
-Then there's that surge in bitcoin, which its fans often say could replace the dollar the global economy's standard.
+Then there's that surge in bitcoin, which its fans often say could replace the dollar as the global economy's standard. Honestly, my hunch is that the recent gains are mostly a renewed round of speculation. Nothing more -- for now.
 
-Honestly, my hunch is that these last few weeks of gains are mostly a renewed round of speculation. Nothing more -- for now.
-
-But if the token sees a more sustained rally over time, in line with what I believe has already been a long-term [trend toward dysfunction](https://peteramckay.medium.com/yes-de-dollarization-is-a-real-risk-fd43f7954fd5) in the U.S. political system that undermines the dollar, let's check back on that piece of the puzzle.
+But if the token sees a more sustained rally over time, coupled with what I believe has already been a long-term [trend toward dysfunction](https://peteramckay.medium.com/yes-de-dollarization-is-a-real-risk-fd43f7954fd5) in the U.S. political system that undermines the dollar, let's check back.
 
  <hr>
 
@@ -39,7 +37,7 @@ But if the token sees a more sustained rally over time, in line with what I beli
 
 ### Five Things: April 27 to May 3, 2025
 
-*The week's top headlines emerging technologies and trends reshaping the web:*
+*The week's top headlines about emerging technologies and trends reshaping the web:*
 
 - **President Trump's personal crypto dealmaking hurt the industry** politically at the U.S. capitol for the first time. The GENIUS ACT, which would set clearer rules for stablecoins, [failed to pass](https://www.axios.com/2025/05/08/senate-vote-stablecoint-crypto-genius-act) a procedural vote in the Senate by a 48-49 margin Thursday. Several members dropped support for the bill at the last minute, due mostly to growing bipartisan discomfort with Trump's [potential conflicts](https://www.yahoo.com/news/crypto-bill-faces-senate-pushback-182307355.html) around the [DeFi](https://www.investopedia.com/decentralized-finance-defi-5113835) platform [World Liberty Financial](https://qz.com/trump-world-liberty-financial-corruption-meme-coin-1851779511) and his personal [TRUMP memecoin](https://mashable.com/article/donald-trump-cryptocurrency-memecoin-top-holders-foreign-exchanges)... The Genius Act [could yet be revived](https://www.coindesk.com/news-analysis/2025/05/10/state-of-crypto-mapping-out-the-senate-stablecoin-bills-next-steps), but it will have to survive a newly fraught political environment to do so... In the Senate, Connecticut Democrat Richard Blumenthal formed a new subcommittee [to investigate](https://decrypt.co/318358/democratic-senator-investigates-trumps-chilling-crypto-ventures) whether Trump's crypto ventures are violating federal laws. In the House, New York Democrat Ritchie Torres is [proposing legislation](https://www.theblock.co/post/353501/rep-torres-to-introduce-bill-banning-trump-lawmakers-from-cashing-in-on-memecoins-and-stablecoins) that would bar lawmakers from profiting from similar crypto activity in the future.
 
@@ -64,7 +62,7 @@ The protocol only uses a single line of code, simplifying how crypto could be us
 
 - **Being polite to AI chatbots is pointless,** according to new research by a team from George Washington University. But some skeptics say the latest study's methodology was too narrow to capture the broader impact of saying "please" and "thank you" to elicit higher-quality responses from some large-language models. ([Decrypt](https://decrypt.co/317176/polite-chatgpt-pointless-new-research))
 
-_**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available here [here](https://w3wnews.substack.com/about).**_
+_**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
 _**If you need to reach me directly for any reason, email peter[at]w3w[dot]media.**_
 
